--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   height: 100%;
   min-height: 100vh;
 }
+
 .searchInput {
   border-radius: 17px;
   border-style: hidden;
@@ -19,7 +20,7 @@
 .searchInput :focus {
   outline: none !important;
 }
-#paginationButton {
+.myButton {
   box-shadow: 3px 4px 0px 0px #899599;
   margin-right: 0.5vh;
   margin-top: 2vh;
@@ -34,37 +35,47 @@
   text-shadow: 0px 1px 0px #e1e2ed;
   margin-bottom: 2vh;
 }
-#paginationButton :hover {
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+
+.myButton.active{
+  background-color: rgb(83, 83, 111);
 }
+
+
 
 .card {
   padding: 4vh;
   width: 16rem;
   opacity: 80%;
-  height: 30rem;
   border: #ededed;
   background-color: aliceblue;
   border-radius: 10%;
   box-shadow: 3px 4px 0px 0px #899599;
+  box-sizing: content-box;
 }
 .card img {
   width: 100%;
-  height: 40%;
+  height: 40% ;
   border-radius: 5%;
   box-shadow: 3px 4px 0px 0px #c1c8ca;
+  border: 1px solid #eee;
+
 }
 .card:hover {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
-.card h3{
+.card h3 {
   margin-top: 1vh;
 }
-.footer {
-  margin-bottom: 0px;
+
+.detailpage {
+  width: 50vh;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 3vh;
+  padding-bottom: 3vh;
 }
 
-.loading{
+.loading {
   animation: rotation 0.5s infinite linear;
 }
 @keyframes rotation {
